[workspace]
resolver = "2"
members = ["assert_tv", "assert_tv_macros", "example"]

[workspace.package]
version = "0.6.7"
categories = ["development-tools", "development-tools::testing"]
authors = ["Amin Faez <amin.faez.inbox@gmail.com>"]
description = "De-randomized detereministic tests with test-vectors"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/aminfa/assert_tv"
keywords = ["macro", "test", "test-driven", "test-helpers", "test-vectors"]

[workspace.dependencies]
# Internal crates
assert_tv = { path = "assert_tv", version = "0.6.7" }
assert_tv_macros = { path = "assert_tv_macros", version = "0.6.7" }

# External crates
serde = { version = "1.x", features = ["derive"] }
serde_json = "1.x"
serde_yaml = "0.9"
toml = "1.1"
log = "0.4"
anyhow = "1.x"
zstd = "0.13"
base64 = "0.22"
rand = "0.10"
syn = { version = "2.0", features = ["full"] }
quote = "1"
proc-macro2 = "1"
