[package]
name = "assert_tv"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
tls = []
default = ["tls"]

[dependencies]
serde = { version = "1.x", features = ["derive"], optional = false }
serde_json = { version = "1.x", optional = false }
log = { version = "0.4", optional = false }
anyhow = "1.x"
serde_yaml = { version = "0.9", optional = false }
toml = { version = "1.1", optional = false }
assert_tv_macros = { path = "../assert_tv_macros", version = "0.6.5" }
zstd = "0.13"
base64 = "0.22"

[dev-dependencies]
rand = "0.10"
