[package]
name = "assert_tv"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
tls = []
default = ["tls"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
log.workspace = true
anyhow.workspace = true
serde_yaml.workspace = true
toml.workspace = true
assert_tv_macros.workspace = true
zstd.workspace = true
base64.workspace = true

[dev-dependencies]
rand.workspace = true
